--- a/css/weather.css
+++ b/css/weather.css
@@ -50,7 +50,17 @@ body {
 					text-align: right;
 				}
 			}
-		}		
+		}	
+
+		section.weather-details {
+			div.main {
+				label {
+					display:block;
+				}
+			}
+	
+}
+		
 	}
 	
 }
